--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="css/style.css">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <link rel="stylesheet" href="css/style.css" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign-Up Form</title>
-</head>
-<body>
-    
+  </head>
+  <body>
+    <div class="image-sidebar">
+      <div class="logo-container">
+        <img src="img/odin-lined.png" alt="Odin logo" />
+        <span>ODIN</span>
+      </div>
+      <div class="image-credit">
+        Photo by
+        <a href="https://unsplash.com/@haliewestphoto">Halie West</a> on
+        <a href="https://unsplash.com/photos/25xggax4bSA">Unsplash</a>
+      </div>
+    </div>
     <script src="js/script.js"></script>
-</body>
+  </body>
 </html>
