--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Sign-Up Form</title>
   </head>
   <body>
-    <div class="image-sidebar">
+    <!-- <div class="image-sidebar">
       <div class="logo-container">
         <img src="img/odin-lined.png" alt="Odin logo" />
         <span>ODIN</span>
@@ -18,6 +18,19 @@
         <a href="https://unsplash.com/@haliewestphoto">Halie West</a> on
         <a href="https://unsplash.com/photos/25xggax4bSA">Unsplash</a>
       </div>
+    </div> -->
+    <div class="main-content">
+      <section class="info-container">
+        <div></div>
+        <span>
+          This is not a real online service! You know you need something<br />
+          like this in your life to help you realize your deepest dreams.<br />
+          Sign up <em>now</em> to get started.<br /><br />
+          You <em>know</em> you want to.
+        </span>
+      </section>
+      <section class="form-container"></section>
+      <section class="buttons-container"></section>
     </div>
     <script src="js/script.js"></script>
   </body>
