Create the sign-up form
- Right now only the required validation rule is set on some form
  controls, more rules and styles will be applied.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,46 @@
           You <em>know</em> you want to.
         </span>
       </section>
-      <section class="form-container"></section>
+      <section class="form-container">
+        <h2>Let's do this!</h2>
+        <form action="#">
+          <div>
+            <label for="fname">FIRST NAME</label
+            ><input type="text" id="fname" name="firstname" required />
+            <span></span>
+          </div>
+          <div>
+            <label for="lname">LAST NAME</label
+            ><input type="text" id="lname" name="lastname" required />
+            <span></span>
+          </div>
+          <div>
+            <label for="email">EMAIL</label
+            ><input type="email" id="email" name="email" required />
+            <span></span>
+          </div>
+          <div>
+            <label for="phone">PHONE</label
+            ><input type="tel" id="phone" name="phone" />
+            <span></span>
+          </div>
+          <div>
+            <label for="pswd">PASSWORD</label
+            ><input type="password" id="pswd" name="password" required />
+            <span></span>
+          </div>
+          <div>
+            <label for="pswd-confirmation">CONFIRM PASSWORD</label
+            ><input
+              type="password"
+              id="pswd-confirmation"
+              name="password-confirmation"
+              required
+            />
+            <span></span>
+          </div>
+        </form>
+      </section>
       <section class="buttons-container"></section>
     </div>
     <script src="js/script.js"></script>
