--- a/index.html
+++ b/index.html
@@ -69,7 +69,10 @@
           </div>
         </form>
       </section>
-      <section class="buttons-container"></section>
+      <section class="buttons-container">
+        <button>Create Account</button>
+        <p>Already have an account? <a href="#">Log in</a></p>
+      </section>
     </div>
     <script src="js/script.js"></script>
   </body>
