Combine the components together
- Combine the image sidebar with the main content.
- Associate the button with the form using its 'form' attribute.
- Update some styles.

--- a/index.html
+++ b/index.html
@@ -8,71 +8,73 @@
     <title>Sign-Up Form</title>
   </head>
   <body>
-    <!-- <div class="image-sidebar">
-      <div class="logo-container">
-        <img src="img/odin-lined.png" alt="Odin logo" />
-        <span>ODIN</span>
+    <div class="content">
+      <div class="image-sidebar">
+        <div class="logo-container">
+          <img src="img/odin-lined.png" alt="Odin logo" />
+          <span>ODIN</span>
+        </div>
+        <div class="image-credit">
+          Photo by
+          <a href="https://unsplash.com/@haliewestphoto">Halie West</a> on
+          <a href="https://unsplash.com/photos/25xggax4bSA">Unsplash</a>
+        </div>
       </div>
-      <div class="image-credit">
-        Photo by
-        <a href="https://unsplash.com/@haliewestphoto">Halie West</a> on
-        <a href="https://unsplash.com/photos/25xggax4bSA">Unsplash</a>
+      <div class="main-content">
+        <section class="info-container">
+          <div></div>
+          <span>
+            This is not a real online service! You know you need something<br />
+            like this in your life to help you realize your deepest dreams.<br />
+            Sign up <em>now</em> to get started.<br /><br />
+            You <em>know</em> you want to.
+          </span>
+        </section>
+        <section class="form-container">
+          <p>Let's do this!</p>
+          <form id="sign-up-form" action="#">
+            <div>
+              <label for="fname">FIRST NAME</label
+              ><input type="text" id="fname" name="firstname" required />
+              <span></span>
+            </div>
+            <div>
+              <label for="lname">LAST NAME</label
+              ><input type="text" id="lname" name="lastname" required />
+              <span></span>
+            </div>
+            <div>
+              <label for="email">EMAIL</label
+              ><input type="email" id="email" name="email" required />
+              <span></span>
+            </div>
+            <div>
+              <label for="phone">PHONE</label
+              ><input type="tel" id="phone" name="phone" />
+              <span></span>
+            </div>
+            <div>
+              <label for="pswd">PASSWORD</label
+              ><input type="password" id="pswd" name="password" required />
+              <span></span>
+            </div>
+            <div>
+              <label for="pswd-confirmation">CONFIRM PASSWORD</label
+              ><input
+                type="password"
+                id="pswd-confirmation"
+                name="password-confirmation"
+                required
+              />
+              <span></span>
+            </div>
+          </form>
+        </section>
+        <section class="buttons-container">
+          <button form="sign-up-form">Create Account</button>
+          <p>Already have an account? <a href="#">Log in</a></p>
+        </section>
       </div>
-    </div> -->
-    <div class="main-content">
-      <section class="info-container">
-        <div></div>
-        <span>
-          This is not a real online service! You know you need something<br />
-          like this in your life to help you realize your deepest dreams.<br />
-          Sign up <em>now</em> to get started.<br /><br />
-          You <em>know</em> you want to.
-        </span>
-      </section>
-      <section class="form-container">
-        <h2>Let's do this!</h2>
-        <form action="#">
-          <div>
-            <label for="fname">FIRST NAME</label
-            ><input type="text" id="fname" name="firstname" required />
-            <span></span>
-          </div>
-          <div>
-            <label for="lname">LAST NAME</label
-            ><input type="text" id="lname" name="lastname" required />
-            <span></span>
-          </div>
-          <div>
-            <label for="email">EMAIL</label
-            ><input type="email" id="email" name="email" required />
-            <span></span>
-          </div>
-          <div>
-            <label for="phone">PHONE</label
-            ><input type="tel" id="phone" name="phone" />
-            <span></span>
-          </div>
-          <div>
-            <label for="pswd">PASSWORD</label
-            ><input type="password" id="pswd" name="password" required />
-            <span></span>
-          </div>
-          <div>
-            <label for="pswd-confirmation">CONFIRM PASSWORD</label
-            ><input
-              type="password"
-              id="pswd-confirmation"
-              name="password-confirmation"
-              required
-            />
-            <span></span>
-          </div>
-        </form>
-      </section>
-      <section class="buttons-container">
-        <button>Create Account</button>
-        <p>Already have an account? <a href="#">Log in</a></p>
-      </section>
     </div>
     <script src="js/script.js"></script>
   </body>
