--- a/index.html
+++ b/index.html
@@ -35,27 +35,52 @@
           <form id="sign-up-form" action="#">
             <div>
               <label for="fname">FIRST NAME</label
-              ><input type="text" id="fname" name="firstname" required />
+              ><input
+                type="text"
+                id="fname"
+                name="firstname"
+                placeholder=" "
+                required
+              />
               <span></span>
             </div>
             <div>
               <label for="lname">LAST NAME</label
-              ><input type="text" id="lname" name="lastname" required />
+              ><input
+                type="text"
+                id="lname"
+                name="lastname"
+                placeholder=" "
+                required
+              />
               <span></span>
             </div>
             <div>
               <label for="email">EMAIL</label
-              ><input type="email" id="email" name="email" required />
+              ><input
+                type="email"
+                id="email"
+                name="email"
+                placeholder=" "
+                required
+              />
               <span></span>
             </div>
             <div>
               <label for="phone">PHONE</label
-              ><input type="tel" id="phone" name="phone" />
+              ><input type="tel" id="phone" name="phone" placeholder=" " />
               <span></span>
             </div>
             <div>
               <label for="pswd">PASSWORD</label
-              ><input type="password" id="pswd" name="password" required />
+              ><input
+                type="password"
+                id="pswd"
+                name="password"
+                placeholder=" "
+                pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?!.*\s).*$"
+                required
+              />
               <span></span>
             </div>
             <div>
@@ -64,6 +89,8 @@
                 type="password"
                 id="pswd-confirmation"
                 name="password-confirmation"
+                placeholder=" "
+                pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?!.*\s).*$"
                 required
               />
               <span></span>
